# PIAIC-Assignments

./: .gitignore
Assignment-0/: index.html  package-lock.json
Assignment-1/: package.json
Assignment-1/src/: index.ts
Assignment-2/: Question.txt  index.html  index.js  index.ts
Assignment-3/: Question.txt  index.html  index.js  index.ts
Assignment-4/: Questions.txt
Generative AI Assignments/Assignment 1 Student App/assignment1/: README.md  pyproject.toml
Generative AI Assignments/Assignment 1 Student App/assignment1/students/: main.py
Next JS Assignments/Assignment-1 Panaverse Clone/: README.md  package-lock.json  package.json
Next JS Assignments/Assignment-2 Xplore-Skills/: README.md  package-lock.json  package.json
Next JS Assignments/Assignment-3 Blog-app/: next.config.js  package-lock.json  package.json
Next JS Assignments/Assignment-4 UseState/: package-lock.json
Next JS Assignments/Assignment-5 Contentful CMS Blog App/: .env  README.md  next.config.mjs  package-lock.json  package.json
Type Script Assignments/Assignment-0/: package.json  script.js
Type Script Assignments/Assignment-2/: Question.txt  index.html
Type Script Assignments/Assignment-3/: index.html
Typescript Assignments/Assignment 6 -- Calculator/: index.js  index.ts  package-lock.json
Typescript Assignments/Assignment-0/: script.js  script.ts
Typescript Assignments/Assignment-1/: index.html  index.js  index.ts
Typescript Assignments/Assignment-2/: Question.txt  index.js
Typescript Assignments/Assignment-3/: Question.txt  index.ts
(+61 files in other folders)
