[tool.poetry]
name = "students"
version = "0.1.0"
description = ""
authors = ["Ahmad Saboor <iamahmadsaboor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[tool.poetry.scripts]
"dev" = "students.main:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
